Début page cumul Pea

--- a/BudgetTrackerApp/Components/Pages/PageInputPea.razor
+++ b/BudgetTrackerApp/Components/Pages/PageInputPea.razor
@@ -7,7 +7,7 @@
 @rendermode InteractiveServer
 @inject DatabaseSelectorService DbSelector
 @inject IDbContextFactory<AppDbContext> DbFactory
-@inject PeaService PeaService
+@inject BudgetTrackerApp.Data.Services.PeaService PeaService
 
 <MudText Typo="Typo.h4" Class="my-8">Saisie d'opération sur le PEA</MudText>
 
