Possibilité de choisir courbes à afficher pour le PEA. Aujourd'hui comme date par défaut

--- a/BudgetTrackerApp/Components/Pages/PageInputPea.razor
+++ b/BudgetTrackerApp/Components/Pages/PageInputPea.razor
@@ -26,6 +26,7 @@
             <MudDatePicker Label=""
                            AutoClose="true"
                            Date="context.Date"
+                           Editable="true"
                            DateChanged="@(async (DateTime? newDate) => 
                            {
                                 if (newDate.HasValue)
