--- a/Frontend/BudgetTrackerUI/src/app/import-file/import-file.html
+++ b/Frontend/BudgetTrackerUI/src/app/import-file/import-file.html
@@ -1,21 +1,49 @@
-<div style="padding: 20px;">
-  <h2>Importer des transactions (CSV / Excel)</h2>
+<div class="import-container" style="padding: 20px;">
+  <input type="file" (change)="onFileSelected($event)" #fileInput hidden>
   
-  <input type="file" (change)="onFileSelected($event)" style="display: none" #fileInput>
-  
-  <button mat-raised-button color="primary" (click)="fileInput.click()">
-    <mat-icon>attach_file</mat-icon> Sélectionner un fichier
+  <button mat-raised-button color="primary" (click)="fileInput.click()" [disabled]="isUploading()">
+    <mat-icon>cloud_upload</mat-icon> Charger un fichier
   </button>
 
-  <span *ngIf="selectedFile" style="margin-left: 10px;">
-    {{ selectedFile.name }}
-  </span>
+  <p *ngIf="uploadStatus()" style="margin: 10px 0;">{{ uploadStatus() }}</p>
 
-  <div style="margin-top: 20px;">
-    <button mat-flat-button color="accent" [disabled]="!selectedFile || isUploading()" (click)="onUpload()">
-      <mat-icon>cloud_upload</mat-icon> Lancer l'importation
-    </button>
-  </div>
+  <table mat-table [dataSource]="fichiersImports()" class="mat-elevation-z8" style="width: 100%; margin-top: 20px;">
+    
+    <ng-container matColumnDef="nom">
+      <th mat-header-cell *matHeaderCellDef>Fichier</th>
+      <td mat-cell *matCellDef="let element">{{element.nomDuFichier}}</td>
+    </ng-container>
 
-  <p *ngIf="uploadStatus()">{{ uploadStatus() }}</p>
+    <ng-container matColumnDef="resultat">
+      <th mat-header-cell *matHeaderCellDef>Résultat</th>
+      <td mat-cell *matCellDef="let element">
+        <span [style.color]="element.isSuccessful ? 'green' : 'red'">
+          {{element.isSuccessful ? 'Succès' : element.msgErreur}}
+        </span>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="banque">
+      <th mat-header-cell *matHeaderCellDef>Banque</th>
+      <td mat-cell *matCellDef="let element">{{element.parser}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="stats">
+      <th mat-header-cell *matHeaderCellDef>Opérations (Lues/Ajoutées)</th>
+      <td mat-cell *matCellDef="let element">{{element.nombreOperationsLus}} / {{element.nombreOperationsAjoutees}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="dates">
+      <th mat-header-cell *matHeaderCellDef>Période</th>
+      <td mat-cell *matCellDef="let element">{{element.dateMin}} au {{element.dateMax}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="duree">
+      <th mat-header-cell *matHeaderCellDef>Traitement</th>
+      <td mat-cell *matCellDef="let element">{{element.tempsDeTraitementMs.toFixed(0)}} ms</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
