--- a/Frontend/BudgetTrackerUI/src/app/rules-list/rules-list.html
+++ b/Frontend/BudgetTrackerUI/src/app/rules-list/rules-list.html
@@ -1,84 +1,112 @@
-<div class="p-6">
-  <h2 class="text-2xl mb-4">Règles de catégorisation</h2>
+<mat-card class="section">
+  <mat-card-header>
+    <mat-card-title>Règles de catégorisation</mat-card-title>
+  </mat-card-header>
 
-  <table mat-table [dataSource]="rules()" class="mat-elevation-z8 w-full">
-    
-    <ng-container matColumnDef="active">
-      <th mat-header-cell *matHeaderCellDef>Active</th>
-      <td mat-cell *matCellDef="let element">
-        <mat-slide-toggle [(ngModel)]="element.isUsed" (change)="save(element)"></mat-slide-toggle>
-      </td>
-    </ng-container>
+  <mat-card-content>
+    <div class="table-container">
+      <table mat-table [dataSource]="rules()" class="mat-elevation-z8 w-full">
 
-    <ng-container matColumnDef="pattern">
-      <th mat-header-cell *matHeaderCellDef>Contient...</th>
-      <td mat-cell *matCellDef="let element">
-        <input matInput [(ngModel)]="element.pattern" (blur)="save(element)" class="border p-1 rounded">
-      </td>
-    </ng-container>
+        <ng-container matColumnDef="active">
+          <th mat-header-cell *matHeaderCellDef>Active</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-slide-toggle [(ngModel)]="element.isUsed" (change)="save(element)"></mat-slide-toggle>
+          </td>
+        </ng-container>
 
-    <ng-container matColumnDef="minAmount">
-      <th mat-header-cell *matHeaderCellDef>Min</th>
-      <td mat-cell *matCellDef="let element">
-        <input type="number" [(ngModel)]="element.minAmount" (blur)="save(element)" class="border p-1 rounded w-20">
-      </td>
-    </ng-container>
+        <ng-container matColumnDef="pattern">
+          <th mat-header-cell *matHeaderCellDef>Contient...</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline" class="w-full">
+              <input matInput [(ngModel)]="element.pattern" (blur)="save(element)">
+            </mat-form-field>
+          </td>
+        </ng-container>
 
-    <ng-container matColumnDef="maxAmount">
-      <th mat-header-cell *matHeaderCellDef>Max</th>
-      <td mat-cell *matCellDef="let element">
-        <input type="number" [(ngModel)]="element.maxAmount" (blur)="save(element)" class="border p-1 rounded w-20">
-      </td>
-    </ng-container>
+        <ng-container matColumnDef="minAmount">
+          <th mat-header-cell *matHeaderCellDef>Min</th>
+          <td mat-cell *matCellDef="let element">
+            <div class="w-24">
+              <mat-form-field appearance="outline" class="w-full">
+                <input matInput type="number" [(ngModel)]="element.minAmount" (blur)="save(element)">
+              </mat-form-field>
+            </div>
+          </td>
+        </ng-container>
 
-    <ng-container matColumnDef="minDate">
-      <th mat-header-cell *matHeaderCellDef>Début</th>
-      <td mat-cell *matCellDef="let element">
-        <input matInput [matDatepicker]="p1" [(ngModel)]="element.minDate" (dateChange)="save(element)" class="w-24">
-        <mat-datepicker-toggle [for]="p1"></mat-datepicker-toggle>
-        <mat-datepicker #p1></mat-datepicker>
-      </td>
-    </ng-container>
+        <ng-container matColumnDef="maxAmount">
+          <th mat-header-cell *matHeaderCellDef>Max</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline" class="w-12">
+              <input matInput type="number" [(ngModel)]="element.maxAmount" (blur)="save(element)">
+            </mat-form-field>
+          </td>
+        </ng-container>
 
-    <ng-container matColumnDef="maxDate">
-      <th mat-header-cell *matHeaderCellDef>Fin</th>
-      <td mat-cell *matCellDef="let element">
-        <input matInput [matDatepicker]="p2" [(ngModel)]="element.maxDate" (dateChange)="save(element)" class="w-24">
-        <mat-datepicker-toggle [for]="p2"></mat-datepicker-toggle>
-        <mat-datepicker #p2></mat-datepicker>
-      </td>
-    </ng-container>
+        <ng-container matColumnDef="minDate">
+          <th mat-header-cell *matHeaderCellDef>Début</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline" class="w-32">
+              <input matInput [matDatepicker]="p1" [(ngModel)]="element.minDate" (dateChange)="save(element)">
+              <mat-datepicker-toggle matSuffix [for]="p1"></mat-datepicker-toggle>
+              <mat-datepicker #p1></mat-datepicker>
+            </mat-form-field>
+          </td>
+        </ng-container>
 
-    <ng-container matColumnDef="comment">
-      <th mat-header-cell *matHeaderCellDef>Commentaire</th>
-      <td mat-cell *matCellDef="let element">
-        <input matInput [(ngModel)]="element.commentaire" (blur)="save(element)">
-      </td>
-    </ng-container>
+        <ng-container matColumnDef="maxDate">
+          <th mat-header-cell *matHeaderCellDef>Fin</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline" class="w-32">
+              <input matInput [matDatepicker]="p1" [(ngModel)]="element.maxDate" (dateChange)="save(element)">
+              <mat-datepicker-toggle matSuffix [for]="p1"></mat-datepicker-toggle>
+              <mat-datepicker #p1></mat-datepicker>
+            </mat-form-field>
+          </td>
+        </ng-container>
 
-    <ng-container matColumnDef="arrow">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element">
-        <mat-icon color="primary">arrow_circle_right</mat-icon>
-      </td>
-    </ng-container>
+        <ng-container matColumnDef="comment">
+          <th mat-header-cell *matHeaderCellDef>Commentaire</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline" class="w-full">
+              <input matInput [(ngModel)]="element.commentaire" (blur)="save(element)">
+            </mat-form-field>
 
-    <ng-container matColumnDef="category">
-      <th mat-header-cell *matHeaderCellDef>Catégorie</th>
-      <td mat-cell *matCellDef="let element">
-        <mat-select [(ngModel)]="element.category" (selectionChange)="save(element)">
-          <mat-option *ngFor="let cat of categories()" [value]="cat.name">
-            {{cat.name}}
-          </mat-option>
-        </mat-select>
-      </td>
-    </ng-container>
+          </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+        <ng-container matColumnDef="arrow">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button color="primary" disabled>
+              <mat-icon>arrow_forward</mat-icon>
+            </button>
+          </td>
+        </ng-container>
 
-  <button mat-raised-button color="primary" class="mt-4" (click)="addRule()">
-    Ajouter une règle
-  </button>
-</div>
+        <ng-container matColumnDef="category">
+          <th mat-header-cell *matHeaderCellDef>Catégorie</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline" class="w-48">
+              <mat-select [(ngModel)]="element.category" (selectionChange)="save(element)">
+                <mat-option *ngFor="let cat of categories()" [value]="cat.name">
+                  {{ cat.name }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+  </mat-card-content>
+
+  <mat-card-actions align="end">
+    <button mat-flat-button color="primary" (click)="addRule()">
+      <mat-icon>add</mat-icon>
+      Ajouter une règle
+    </button>
+  </mat-card-actions>
+</mat-card>
