--- a/Frontend/BudgetTrackerUI/src/app/category-list/category-list.html
+++ b/Frontend/BudgetTrackerUI/src/app/category-list/category-list.html
@@ -1,32 +1,29 @@
 <div class="p-8">
-  <h2 class="text-2xl mb-4">Liste des Catégories</h2>
-  <p class="text-gray-500 mb-6 italic">Le renommage met à jour automatiquement les opérations et les règles associées.</p>
+  <mat-card class="section">
+    <mat-card-header>
+      <mat-card-title>Liste des Catégories</mat-card-title>
+    </mat-card-header>
 
-  <table mat-table [dataSource]="categories()" class="mat-elevation-z8 w-full mb-4">
-    
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Nom</th>
-      <td mat-cell *matCellDef="let element">
-        <mat-form-field appearance="outline" class="w-full mt-2">
-          <input matInput [(ngModel)]="element.name" (blur)="save(element)">
-        </mat-form-field>
-      </td>
-    </ng-container>
+    <mat-card-content style="padding-top: 20px;">
+      <ag-grid-angular
+          style="width: 100%;"
+          class="ag-theme-alpine"
+          [rowData]="categories()"
+          [columnDefs]="columnDefs"
+          [defaultColDef]="defaultColDef"
+          [domLayout]="'autoHeight'"
+          [getRowId]="getRowId"
+          [context]="gridContext"
+          (gridReady)="onGridReady($event)"
+          (cellValueChanged)="onCellValueChanged($event)">
+        </ag-grid-angular>
+    </mat-card-content>
 
-    <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef>Type</th>
-      <td mat-cell *matCellDef="let element">
-        <mat-form-field appearance="outline" class="w-full mt-2">
-          <input matInput [(ngModel)]="element.type" (blur)="save(element)">
-        </mat-form-field>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
-  <button mat-raised-button color="primary" (click)="addCategory()">
-    Ajouter une catégorie
-  </button>
+    <mat-card-actions align="end">
+    <button mat-flat-button color="primary" (click)="addCategory()">
+      <mat-icon>add</mat-icon>
+      Ajouter une catégorie
+    </button>
+  </mat-card-actions>
+  </mat-card>
 </div>
